submissions/Bat/error-output.txt
submissions/Bat/problem4.cpp: In function 'int main()':
submissions/Bat/problem4.cpp:7:12: error: 'strlen' was not declared in this scope
 x=strlen(ch);
            ^
'submissions\Bat\problem4.exe' is not recognized as an internal or external command,
operable program or batch file.
